--- a/ui/package.json
+++ b/ui/package.json
@@ -5,18 +5,33 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "schema": "graphql-codegen",
+    "schema:w": "graphql-codegen --watch='src/operations/**/*.graphql'"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.8",
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
+    "@tailwindcss/forms": "^0.4.0",
+    "@types/yaml": "^1.9.7",
+    "apollo-link-error": "^1.1.13",
     "autoprefixer": "^10.4.2",
+    "graphql": "^15.7.2",
     "postcss": "^8.4.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "tailwindcss": "^3.0.19"
+    "react-hook-form": "^7.26.1",
+    "react-router-dom": "6",
+    "tailwindcss": "^2.2.9",
+    "yaml": "^1.10.2"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.21.8",
+    "@graphql-codegen/typescript": "^1.23.0",
+    "@graphql-codegen/typescript-operations": "^1.18.4",
+    "@graphql-codegen/typescript-react-apollo": "^2.3.1",
+    "@graphql-codegen/typescript-resolvers": "^1.20.0",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
