--- a/ui/package.json
+++ b/ui/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.8",
-    "@headlessui/react": "^1.4.3",
-    "@heroicons/react": "^1.0.5",
-    "@tailwindcss/forms": "^0.4.0",
+    "@headlessui/react": "^1.6.4",
+    "@heroicons/react": "^1.0.6",
+    "@tailwindcss/forms": "^0.5.2",
+    "@types/react-table": "^7.7.12",
     "@types/yaml": "^1.9.7",
     "apollo-link-error": "^1.1.13",
     "autoprefixer": "^10.4.2",
@@ -23,7 +24,9 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.26.1",
     "react-router-dom": "6",
-    "tailwindcss": "^2.2.9",
+    "react-table": "^7.8.0",
+    "tailwindcss": "^3.1.3",
+    "timeago-react": "^3.0.5",
     "yaml": "^1.10.2"
   },
   "devDependencies": {
