Add blocks+block detail

--- a/api/.gqlgen.yml
+++ b/api/.gqlgen.yml
@@ -11,3 +11,8 @@ exec:
 model:
   filename: gql/models/models.go
   package: models
+
+models:
+  Channel:
+    model: github.com/kfsoftware/hlf-operator-ui/api/gql/models.Channel
+
