--- a/ui/package.json
+++ b/ui/package.json
@@ -23,10 +23,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.26.1",
+    "react-oidc-context": "^2.1.1",
     "react-router-dom": "6",
     "react-table": "^7.8.0",
     "tailwindcss": "^3.1.3",
     "timeago-react": "^3.0.5",
+    "use-query-params": "^1.2.3",
     "yaml": "^1.10.2"
   },
   "devDependencies": {
