--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.5.8",
     "@headlessui/react": "^1.6.4",
     "@heroicons/react": "^1.0.6",
+    "@hookform/resolvers": "^2.9.6",
     "@tailwindcss/forms": "^0.5.2",
     "@types/react-table": "^7.7.12",
     "@types/yaml": "^1.9.7",
@@ -29,7 +30,8 @@
     "tailwindcss": "^3.1.3",
     "timeago-react": "^3.0.5",
     "use-query-params": "^1.2.3",
-    "yaml": "^1.10.2"
+    "yaml": "^1.10.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.21.8",
