--- a/ui/package.json
+++ b/ui/package.json
@@ -18,9 +18,12 @@
     "@types/react-table": "^7.7.12",
     "@types/yaml": "^1.9.7",
     "apollo-link-error": "^1.1.13",
+    "asn1js": "^3.0.5",
     "autoprefixer": "^10.4.2",
     "graphql": "^15.7.2",
+    "pkijs": "^3.0.7",
     "postcss": "^8.4.6",
+    "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.26.1",
