--- a/ui/package.json
+++ b/ui/package.json
@@ -12,21 +12,24 @@
   "dependencies": {
     "@apollo/client": "^3.5.8",
     "@headlessui/react": "^1.6.4",
-    "@heroicons/react": "^1.0.6",
+    "@heroicons/react": "^2.0.11",
     "@hookform/resolvers": "^2.9.6",
     "@tailwindcss/forms": "^0.5.2",
+    "@types/base-64": "^1.0.0",
     "@types/react-table": "^7.7.12",
     "@types/yaml": "^1.9.7",
     "apollo-link-error": "^1.1.13",
     "asn1js": "^3.0.5",
     "autoprefixer": "^10.4.2",
+    "base-64": "^1.0.0",
     "graphql": "^15.7.2",
+    "oidc-client-ts": "^2.2.0",
     "pkijs": "^3.0.7",
     "postcss": "^8.4.6",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.26.1",
+    "react-hook-form": "^7.36.1",
     "react-oidc-context": "^2.1.1",
     "react-router-dom": "6",
     "react-table": "^7.8.0",
