--- a/api/.goreleaser.yml
+++ b/api/.goreleaser.yml
@@ -16,8 +16,15 @@ builds:
     binary: hlf-operator-api
     goos:
       - linux
+      - darwin
+      - windows
+      - freebsd
+    ignore:
+      - goos: windows
+        goarch: arm64
     goarch:
       - amd64
+      - arm64
     env:
       - CGO_ENABLED=1
     ldflags:
