--- a/api/.goreleaser.yml
+++ b/api/.goreleaser.yml
@@ -4,7 +4,7 @@ release:
   name_template: "Version {{.Version}}"
   github:
     owner: kfsoftware
-    name: hlf-operator-ui
+    name: hlf-operator-explorer
 
 before:
   hooks:
